fixed spacing between submit form and header and footer

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -148,8 +148,8 @@
 /*Submit Form on Submit Your YouTube Video*/
 #submit-youtube {
 color:#000;
-padding-top: 30px;
-padding-bottom: 175px;
+padding-top: 20px;
+padding-bottom: 5px;
 }
 
 /*************Submit page End******************/
